--- a/estilo/style.css
+++ b/estilo/style.css
@@ -6,3 +6,45 @@ verde: #49a09d
 roxo: #5f2c82
 
 */
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   margin: 0px;
+   padding: opx; 
+   box-sizing: border-box;
+}
+body , html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login {
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 600px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.701);
+    transition: width .3s, heigth .3s;
+}
+
+section#login > div#imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/pexels-scott-webb-430207.jpg);
+    height: 250px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
