--- a/estilo/style.css
+++ b/estilo/style.css
@@ -57,3 +57,29 @@ margin-bottom: 10px;
 div#formulario > p {
     font-size: 0.8em;
 }
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 97%;
+    height: 35px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+form > input[type=submit]:hover {
+background-color: #2d6e6c;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+    text-decoration: none;
+    background-color: #73d8d5;
+    border-radius: 5px;
+    border: 1px solid #49a09d;
+}
