--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,6 +58,12 @@ div#formulario > p {
     font-size: 0.8em;
 }
 
+div.campo > i {
+font-size: 1.7em;
+
+}
+
+
 form > input[type=submit] {
     display: block;
     font-size: 1em;
@@ -78,6 +84,8 @@ form > a.botao {
     text-align: center;
     width: 100%;
     height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
     text-decoration: none;
     background-color: #73d8d5;
     border-radius: 5px;
